<resources>
    <string name="app_name">My financions</string>
    <string name="log_out">Log out</string>
    <string name="connection_faild">Connection faild</string>
    <string name="auth_wrong">Auth faild</string>
    <string name="auth_faild">Authentication faild</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="income">Income</string>
    <string name="cost">Cost</string>
    <string name="noDataForMonth">No data available for this month</string>
    <string name="transaction_loading_error">Error while loading transaction</string>
    <string name="transactions_loading_error">Error while loading transactions</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="title_activity_add_transaction">Add transaction</string>
    <string name="table_add_price">Price</string>
    <string name="table_add_category">Category</string>
    <string name="action_settings">Settings</string>
    <string name="set_price_and_category">Set price and select category.</string>
    <string name="set_price">Set price.</string>
    <string name="select_category">Select category.</string>
    <string name="add_switch_on">+</string>
    <string name="add_switch_off">-</string>
    <string name="enter_description">Enter description</string>
    <string name="save_completed">Save completed.</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_internet_title">No internet</string>
    <string name="no_internet_text">You are currently offline. Please activate your internet to update your transactions if possible.</string>
    <string name="want_delete_title">Delete transaction?</string>
    <string name="want_delete_text">Do you really want delete this transaction?</string>
    <string name="NO">No</string>
    <string name="YES">Yes</string>
    <string name="TRANSACTION_WILL_BE_DELETE">Transaction will be delete.</string>

    <string-array
        name="incomes_array">
        <item>Other</item>
        <item>Work</item>
        <item>Loan</item>
        <item>Win</item>
        <item>Gift</item>
    </string-array>

    <string-array
        name="costs_array">
        <item>Other</item>
        <item>Food</item>
        <item>Clothes</item>
        <item>Traveling</item>
        <item>Car</item>
        <item>Children</item>
        <item>Holiday</item>
        <item>Home</item>
        <item>Entertainment</item>
        <item>Service</item>
        <item>Animals</item>
        <item>Bills</item>
        <item>Electronics</item>
    </string-array>
</resources>
