<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="MainTabDataBinding">
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="cz.utb.fai.dodo.financialapp.ui.main.MainTabViewModel"/>
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cz.utb.fai.dodo.financialapp.ui.main.MainTabActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="scrollable">


            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            android:layout_above="@+id/linearLayoutBottomSwitch"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:id="@+id/linearLayoutBottomSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/incomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:elevation="0dp"
                android:onClick="@{vm::switchToIncomes}"
                android:text="@string/income" />

            <Button
                android:id="@+id/costButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="@{vm::switchToCosts}"
                android:text="@string/cost" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addTransactionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:backgroundTint="@color/colorAccentDark"
            app:srcCompat="@drawable/ic_add_black_24dp" />

    </RelativeLayout>
</layout>