<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="AddTransactionDataBinding">
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="cz.utb.fai.dodo.financialapp.ui.addTransaction.AddTransactionViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cz.utb.fai.dodo.financialapp.ui.addTransaction.AddTransactionActivity">

        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">

                <Switch
                    android:id="@+id/switchAddTransactionIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:checked="@={vm.income}"
                    android:showText="true"
                    android:switchTextAppearance="@style/SwitchTextAppearance"
                    android:textOff="@string/add_switch_off"
                    android:textOn="@string/add_switch_on"
                    android:textStyle="bold"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track" />


                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:inputType="numberDecimal"
                    android:paddingEnd="8dp"
                    android:paddingStart="0dp"
                    android:text="@={vm.priceString}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="24dp"
                    android:paddingEnd="12dp"
                    android:paddingStart="0dp"
                    android:paddingTop="24dp"
                    android:text="@{vm.currency}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleViewAddTransaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/editTextDescription"
                android:layout_below="@+id/layoutPrice">

            </android.support.v7.widget.RecyclerView>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="3"
                android:padding="10dp"
                android:text="@={vm.description}"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{vm::save}"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />
    </android.support.constraint.ConstraintLayout>
</layout>